syntax = "proto3";

package internalapi.v1;

option go_package = "git.netflux.io/rob/octoplex/internal/generated/grpc/internalapi/v1";

message Command {
  oneof command_type {
    ListDestinationsCommand list_destinations = 1;
    AddDestinationCommand add_destination = 2;
    UpdateDestinationCommand update_destination = 3;
    RemoveDestinationCommand remove_destination = 4;
    StartDestinationCommand start_destination = 5;
    StopDestinationCommand stop_destination = 6;
    CloseOtherInstancesCommand close_other_instances = 7;
    KillServerCommand kill_server = 8;
    StartHandshakeCommand start_handshake = 9;
  }
}

message ListDestinationsCommand {}

message AddDestinationCommand {
  string name = 1;
  string url = 2;
}

message UpdateDestinationCommand {
  bytes id = 1;
  optional string name = 2;
  optional string url = 3;
}

message RemoveDestinationCommand {
  bytes id = 1;
  bool force = 2;
}

message StartDestinationCommand {
  bytes id = 1;
}

message StopDestinationCommand {
  bytes id = 1;
}

message CloseOtherInstancesCommand {}

message KillServerCommand {}

message StartHandshakeCommand {}
